force-app/main/default/objects/Pokemon__c/Pokemon__c.object-meta.xml
<CustomObject>
    <description>Used in pokemon schema</description>
    <label>Pokémon</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pokémon</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>