force-app/main/default/objects/Pokemon__c/fields/Breeding_Notes__c.field-meta.xml
<CustomField>
    <fullName>Breeding_Notes__c</fullName>
    <inlineHelpText>Some pokémon require items to breed.  Inforation is noted here.</inlineHelpText>
    <label>Breeding Notes</label>
    <length>49152</length>
    <type>LongTextArea</type>
</CustomField>