force-app/main/default/objects/Pokemon__c/fields/Evolution_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Evolution_Conditions__c</fullName>
    <formula>&quot;Placeholder&quot;</formula>
    <label>Evolution Conditions</label>
    <type>Text</type>
</CustomField>