force-app/main/default/objects/Pokemon__c/fields/Evolution_Item__c.field-meta.xml
<CustomField>
    <fullName>Evolution_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Item given to a pokémon so that it can evolve.</inlineHelpText>
    <label>Evolution Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Pokémon</relationshipLabel>
    <relationshipName>Pokemon</relationshipName>
    <type>Lookup</type>
</CustomField>