force-app/main/default/objects/Pokemon__c/fields/Evolution_Level__c.field-meta.xml
<CustomField>
    <fullName>Evolution_Level__c</fullName>
    <inlineHelpText>The level this pokémon evolves at.</inlineHelpText>
    <label>Evolution Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>