force-app/main/default/objects/Pokemon__c/fields/Evolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Evolution_Notes__c</fullName>
    <inlineHelpText>Addition notes regarding evolving this pokémon.</inlineHelpText>
    <label>Evolution Notes</label>
    <length>49152</length>
    <type>LongTextArea</type>
</CustomField>