force-app/main/default/objects/Pokemon__c/fields/Evolves_From__c.field-meta.xml
<CustomField>
    <fullName>Evolves_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The pokémon this pokémon evolves from</inlineHelpText>
    <label>Evolves From</label>
    <referenceTo>Pokemon__c</referenceTo>
    <relationshipLabel>Pokémon</relationshipLabel>
    <relationshipName>EvolveFromChild</relationshipName>
    <type>Lookup</type>
</CustomField>