force-app/main/default/objects/Pokemon__c/fields/Evolves_To__c.field-meta.xml
<CustomField>
    <fullName>Evolves_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The pokémon this pokémon evolves into.</inlineHelpText>
    <label>Evolves To</label>
    <referenceTo>Pokemon__c</referenceTo>
    <relationshipLabel>Pokémon (Evolves To)</relationshipLabel>
    <relationshipName>EvolvesToChild</relationshipName>
    <type>Lookup</type>
</CustomField>