force-app/main/default/objects/Pokemon__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <inlineHelpText>The available genders for this pokémon.</inlineHelpText>
    <label>Gender</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pokemon_Gender</valueSetName>
    </valueSet>
</CustomField>