force-app/main/default/objects/Pokemon__c/fields/Locations_Found__c.field-meta.xml
<CustomField>
    <fullName>Locations_Found__c</fullName>
    <inlineHelpText>Places this pokémon can be found</inlineHelpText>
    <label>Locations Found...</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pokemon_Locations</valueSetName>
    </valueSet>
</CustomField>