force-app/main/default/objects/Pokemon__c/fields/Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Notes__c</fullName>
    <inlineHelpText>Any additional notes worth mentioning.</inlineHelpText>
    <label>Other Notes</label>
    <length>49152</length>
    <type>LongTextArea</type>
</CustomField>