force-app/main/default/objects/Pokemon__c/fields/Pokedex_Number__c.field-meta.xml
<CustomField>
    <fullName>Pokedex_Number__c</fullName>
    <inlineHelpText>The number of the pokémon in the Galarian Pokédex</inlineHelpText>
    <label>Pokédex Number</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>