force-app/main/default/objects/Pokemon__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <inlineHelpText>The region the pokémon is from.</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pokemon_Region</valueSetName>
    </valueSet>
</CustomField>