force-app/main/default/objects/Pokemon__c/fields/Trade_To_Evolve__c.field-meta.xml
<CustomField>
    <fullName>Trade_To_Evolve__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If a trade is required in order to evolve this pokémon.</inlineHelpText>
    <label>Trade To Evolve</label>
    <type>Checkbox</type>
</CustomField>