force-app/main/default/objects/Pokemon__c/fields/Types__c.field-meta.xml
<CustomField>
    <fullName>Types__c</fullName>
    <label>Type(s)</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pokemon_Types</valueSetName>
    </valueSet>
</CustomField>