force-app/main/default/objects/Pokemon__c/listViews/All_Pokemon.listView-meta.xml
<ListView>
    <fullName>All_Pokemon</fullName>
    <columns>Pokedex_Number__c</columns>
    <columns>NAME</columns>
    <columns>Types__c</columns>
    <columns>Region__c</columns>
    <columns>Evolves_To__c</columns>
    <columns>Evolution_Conditions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Pokémon</label>
</ListView>